--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,31 +16,34 @@ features = ["docs"]
 rustdoc-args = ["--cfg", "feature=\"docs\""]
 
 [features]
-default = ["async_std", "cookie-secure"]
+#default = ["async_std", "cookie-secure"]
 docs = ["unstable"]
 unstable = []
 hyperium_http = ["http"]
-async_std = [] # "async-std" when it is not default
+async_std = ["async-std"] # "async-std" when it is not default
 cookie-secure = ["cookie/secure"]
 
 [dependencies]
 # Note(yoshuawuyts): used for async_std's `channel` only; use "core" once possible.
 # features: async_std
-async-std = { version = "1.6.0", features = ["unstable"] }
+async-std = { version = "1.6.0", features = ["unstable"], optional = true }
 
 # features: hyperium/http
 http = { version = "0.2.0", optional = true }
 
 anyhow = "1.0.26"
-cookie = { version = "0.14.0", features = ["percent-encode"] }
+cookie = { version = "0.14.0", features = ["percent-encode"], optional = true }
 infer = "0.2.3"
 pin-project-lite = "0.1.0"
 url = { version = "2.1.1", features = ["serde"] }
 serde_json = "1.0.51"
 serde = { version = "1.0.106", features = ["derive"] }
-serde_urlencoded = "0.6.1"
-rand = "0.7.3"
-serde_qs = "0.6.0"
+serde_urlencoded = { version = "0.6.1", optional = true }
+serde_qs = { version = "0.7.0", optional = true }
+
+futures-lite = "1.0.0"
+async-channel = "1.4.1"
+fastrand = "1.3.4"
 
 [dev-dependencies]
 http = "0.2.0"
